<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AutoActivity">

    <TextView
        android:id="@+id/tvMake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_make"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <EditText
        android:id="@+id/edMake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_make"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/tvModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_model"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <EditText
        android:id="@+id/edModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_model"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/tvSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_spinner"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <Spinner
        android:id="@+id/years_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_button" />
    </FrameLayout>

</LinearLayout>